--- a/app/src/main/res/menu/menu_speakers.xml
+++ b/app/src/main/res/menu/menu_speakers.xml
@@ -10,4 +10,9 @@
         android:title="@string/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/share_speakers_url"
+        android:icon="@drawable/ic_share_white_24dp"
+        android:title="@string/share"
+        app:showAsAction="collapseActionView|ifRoom" />
 </menu>
