--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -31,8 +31,8 @@
         <menu>
             <item
                 android:id="@+id/nav_settings"
-                android:title="@string/action_settings" />
-            <item android:title="@string/about" />
+                android:title="Settings" />
+            <item android:title="About us" />
         </menu>
     </item>
 
