--- a/app/src/main/res/layout/activity_speakers.xml
+++ b/app/src/main/res/layout/activity_speakers.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
