--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -32,9 +32,11 @@
         <menu>
             <item
                 android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_settings_grey600_24dp"
                 android:title="@string/menu_settings" />
             <item
                 android:id="@+id/nav_about"
+                android:icon="@drawable/ic_info_grey600_24dp"
                 android:title="@string/menu_about" />
         </menu>
     </item>
