--- a/app/src/main/res/menu/menu_speakers.xml
+++ b/app/src/main/res/menu/menu_speakers.xml
@@ -15,4 +15,9 @@
         android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share"
         app:showAsAction="collapseActionView|ifRoom" />
+    <item
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_sort_white_24dp"
+        android:title="@string/menu_speaker_sort"
+        app:showAsAction="always" />
 </menu>
