--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,4 +18,9 @@
         <item>1</item>
         <item>12</item>
     </string-array>
+    <integer-array name="speaker_sort">
+        <item>@string/dialog_sort_name</item>
+        <item>@string/dialog_sort_organisation</item>
+        <item>@string/dialog_sort_country</item>
+    </integer-array>
 </resources>
